# Bld.ai-BackEnd-3

./: README.md  pyproject.toml
UploadFile/: db.sqlite3
UploadFile/UploadFile/: settings.py  urls.py
UploadFile/media/: FileForHadeer_f3tgQcv.txt  bld.png.jfif
UploadFile/product/: admin.py  models.py  serializers.py  urls.py  views.py
UploadFile/product/migrations/: 0001_initial.py  0002_alter_file_table.py
